--- a/buildspecs/buildspec-test.yml
+++ b/buildspecs/buildspec-test.yml
@@ -11,11 +11,7 @@ phases:
   build:
     commands:
       - echo "Running Jest tests inside the app container..."
-      - docker run --rm \
-          --name nodejs-app-test \
-          -w /app \
-          111376855663.dkr.ecr.ca-central-1.amazonaws.com/nodejs-app:latest \
-          npm test
+      - docker run --rm --name nodejs-app-test -w /app 111376855663.dkr.ecr.ca-central-1.amazonaws.com/nodejs-app:latest npm test
 
   post_build:
     commands:
